--- a/jsdom.html
+++ b/jsdom.html
@@ -14,24 +14,7 @@
   </div>
   <div id ="divlistid">
     <ul class="ulclass">
-      <li class="liclass" >
-        Eggs
-      </li>
-      <li class="liclass">
-        Milk
-      </li>
-      <li class="liclass">
-        Coffee
-      </li>
-      <li class="liclass">
-        Vegetables
-      </li>
-      <li class="liclass">
-        Oil
-      </li>
-      <li class="liclass">
-        dry grocery
-      </li>
+      <!--Empty class-->
     </ul>
   </div>
 
