--- a/Inchome.html
+++ b/Inchome.html
@@ -16,7 +16,7 @@
       </li>
 </ul>
 </nav>
-<div class = "incadd">
+<div class = "incadd" id="incadd">
   <label>Issue Id:</label><input type="text" id="issueid" placeholder="Issue Id" disabled = "disabled"/><br>
   <label>Issue Title:</label><input type="text" id="issuetitle" placeholder="Issue Title"/><br>
   <label> Application:</label><select  id="application">
@@ -41,7 +41,7 @@
 
 <div id="divtable">
   <table id="table" class="tableclass" border="1">
-   
+
       <thead>
         <th>Incident Number</th>
         <th>Incident Title</th>
