--- a/Inchome.html
+++ b/Inchome.html
@@ -5,17 +5,16 @@
   <link rel="stylesheet" type="text/css" href="inccss.css" />
 </head>
 <body>
-<div class="container">
+<div class="navdiv">
   <nav class="topnav">
-    <ul class="navul">
-      <li class="navli">
-        <a href="#">Incident List</a>
-      </li>
-      <li class = "navli">
-        <a href="#">New Incident</a>
-      </li>
+    <ul class="navul" id = "navul">
+      <li id="navli1" class="navli">Incident List</li>
+      <li id = "navli2" class="navli">New Incident</li>
 </ul>
+<!--<a href="#">New Incident</a>-->
 </nav>
+</div>
+<div class="container">
 <div class = "incadd" id="incadd">
   <label>Issue Id:</label><input type="text" id="issueid" placeholder="Issue Id" disabled = "disabled"/><br>
   <label>Issue Title:</label><input type="text" id="issuetitle" placeholder="Issue Title"/><br>
