Changes pushed on 4/20

--- a/Inchome.html
+++ b/Inchome.html
@@ -5,19 +5,21 @@
   <link rel="stylesheet" type="text/css" href="inccss.css" />
 </head>
 <body>
+<div class="parentnav">
+    <div class = "navbar"> 
+      <div class = "logo">
+        <p>LOGO</p>
+      </div>
+      <div class= "menu">
+            <ul class="navul" id = "navul">
+            <li id="navli1" class="navli">Incident List</li>
+            <li id = "navli2" class="navli">New Incident</li>
+            </ul>
+      </div>
+    </div>
 
-<nav>
+</div>
 
-    <ul class="navul" id = "navul">
-      <li id="navli0" class = "navli">
-        Logo
-</li>
-
-      <li id="navli1" class="navli">Incident List</li>
-      <li id = "navli2" class="navli">New Incident</li>
-    </ul>
-<!--<a href="#">New Incident</a>-->
-</nav>
 <div class="container">
 <div class = "incadd" id="incadd">
   <label>Issue Id:</label><input type="text" id="issueid" placeholder="Issue Id" disabled = "disabled"/><br>
